# swathyahita

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  design.md  main.py  pyproject.toml  requirements.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py  models.py  store.py
app/api/: actions.py  dashboard.py  reports.py
app/aws/: clients.py
app/services/: audit.py  classifier.py  contextual_bridge.py  escalation.py  ingestion.py  notifications.py  pdf_extractor.py  prioritizer.py  scoring.py  snooze.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
infrastructure/: setup_aws.sh
mvp/: processor.py
tests/: conftest.py
tests/properties/: test_ingestion_props.py  test_scoring_props.py
tests/unit/: test_api.py  test_ingestion.py  test_scoring.py
